# cwl-upgrader

./: .coveragerc  .flake8  .gitignore  .travis.yml  MANIFEST.in  Makefile  README.rst  conformance-test.sh  mypy-requirements.txt  mypy_requirements.txt  pyproject.toml  release-test.sh  requirements.txt  setup.cfg  setup.py  test-requirements.txt  testing.sh  tox.ini
.github/: dependabot.yml
.github/workflows/: ci-tests.yml  codeql-analysis.yml
cwlupgrader/: __init__.py  __main__.py  main.cwl  main.py
testdata/v1.0/subdir/: params.cwl
testdata/v1.1/: conflict-wf.cwl  params_inc.yml
testdata/v1.1/subdir/: params.cwl
tests/: __init__.py  draft-3-wf-v1.0.cwl  test_complete.py  test_import.py  test_output_dir.py  util.py
