[flake8]
ignore = E124,E128,E129,E201,E202,E225,E226,E231,E265,E271,E302,E303,F401,E402,E501,W503,E731,F811,F821,F841
max-line-length = 88
extend-ignore = E203, W503

[aliases]
test = pytest

[options]
package_dir =
    cwlupgrader.tests = tests
packages = cwlupgrader, cwlupgrader.tests
zip_safe = True
setup_requires =
install_requires =
    setuptools
    ruamel.yaml >= 0.16.0, < 0.19
    schema_salad
include_package_data = True
python_requires = >=3.8, <4
test_suite = tests
tests_require = pytest < 7.5.0

[tool:isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[options.entry_points]
console_scripts = cwl-upgrader = cwlupgrader.main:main

[metadata]
license_files = LICENSE.txt
name = cwl-upgrader
version = 1.2.10
author = Common Workflow Language contributors
author_email = common-workflow-language@googlegroups.com
license = Apache 2.0
description = Common Workflow Language standalone document upgrader
url = https://github.com/common-workflow-language/cwl-upgrader
download_url = https://github.com/common-workflow-language/cwl-upgrader
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics

[options.package_data]
cwlupgrader.tests = ../testdata/**/*.cwl
